[tool.poetry]
name = "mortgage-app"
version = "0.1.0"
description = ""
authors = ["smaule <smaule@deloitte.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7.7"
dash = "^1.12.0"
numpy = "^1.18.5"
black = "^19.10b0"
dash_bootstrap_components = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
